<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PokemonActivity">


    <include
        android:id="@+id/layout_pokemon"
        layout="@layout/pokemon"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/frasepokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/o_mundo_todo_em_uma_flecha"
        android:textSize="20sp"

        app:layout_constraintLeft_toLeftOf="@id/guidelineStartInfo"
        app:layout_constraintRight_toRightOf="@id/guidelineEndInfo"
        app:layout_constraintTop_toBottomOf="@id/layout_pokemon" />

    <TextView

        android:id="@+id/demage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/damage"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@id/guidelineStartInfo"
        app:layout_constraintTop_toBottomOf="@id/frasepokemon" />

    <TextView
        android:id="@+id/demage_int"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/damage"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="@id/guidelineEndInfo"
        app:layout_constraintTop_toBottomOf="@id/frasepokemon" />

    <ProgressBar
        android:id="@+id/demage_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="21dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="40dp"
        android:progressDrawable="@drawable/custom_progressbar_damage"
        app:layout_constraintLeft_toLeftOf="@id/guidelineStartInfo"
        app:layout_constraintRight_toRightOf="@id/guidelineEndInfo"
        app:layout_constraintTop_toBottomOf="@id/demage" />

    <TextView
        android:id="@+id/defense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/defense"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@id/guidelineStartInfo"
        app:layout_constraintTop_toBottomOf="@id/demage_bar" />

    <TextView
        android:id="@+id/defense_int"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/defense"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="@id/guidelineEndInfo"
        app:layout_constraintTop_toBottomOf="@id/demage_bar" />

    <ProgressBar
        android:id="@+id/defense_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="21dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="40dp"
        android:progressDrawable="@drawable/custom_progressbar_defense"
        app:layout_constraintLeft_toLeftOf="@id/guidelineStartInfo"
        app:layout_constraintRight_toRightOf="@id/guidelineEndInfo"
        app:layout_constraintTop_toBottomOf="@id/defense" />

    <TextView
        android:id="@+id/life"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/life"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@id/guidelineStartInfo"
        app:layout_constraintTop_toBottomOf="@id/defense_bar" />

    <TextView
        android:id="@+id/life_int"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/life"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="@id/guidelineEndInfo"
        app:layout_constraintTop_toBottomOf="@id/defense_bar" />

    <ProgressBar
        android:id="@+id/life_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="21dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="40dp"
        android:progressDrawable="@drawable/custom_progressbar_life"
        app:layout_constraintLeft_toLeftOf="@id/guidelineStartInfo"
        app:layout_constraintRight_toRightOf="@id/guidelineEndInfo"
        app:layout_constraintTop_toBottomOf="@id/life" />

    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/height"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@id/guidelineStartInfo"
        app:layout_constraintTop_toBottomOf="@id/life_bar" />

    <TextView
        android:id="@+id/height_int"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/height"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="@id/guidelineEndInfo"
        app:layout_constraintTop_toBottomOf="@id/life_bar" />

    <ProgressBar
        android:id="@+id/height_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"

        android:layout_width="match_parent"
        android:layout_height="21dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="40dp"
        android:progressDrawable="@drawable/custom_progressbar_height"
        app:layout_constraintLeft_toLeftOf="@id/guidelineStartInfo"
        app:layout_constraintRight_toRightOf="@id/guidelineEndInfo"
        app:layout_constraintTop_toBottomOf="@id/height" />

    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/weight"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@id/guidelineStartInfo"
        app:layout_constraintTop_toBottomOf="@id/height_bar" />

    <TextView
        android:id="@+id/weight_int"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/weight"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="@id/guidelineEndInfo"
        app:layout_constraintTop_toBottomOf="@id/height_bar" />

    <ProgressBar
        android:id="@+id/weight_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="21dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="40dp"
        android:progressDrawable="@drawable/custom_progressbar_weight"
        app:layout_constraintLeft_toLeftOf="@id/guidelineStartInfo"
        app:layout_constraintRight_toRightOf="@id/guidelineEndInfo"
        app:layout_constraintTop_toBottomOf="@id/weight" />

    <TextView
        android:id="@+id/base_xp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/base_xp"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@id/guidelineStartInfo"
        app:layout_constraintTop_toBottomOf="@id/weight_bar" />

    <TextView
        android:id="@+id/base_xp_int"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/base_xp"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="@id/guidelineEndInfo"
        app:layout_constraintTop_toBottomOf="@id/weight_bar" />

    <ProgressBar
        android:id="@+id/base_xp_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="21dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="40dp"
        android:progressDrawable="@drawable/custom_progressbar_xp_base"
        app:layout_constraintLeft_toLeftOf="@id/guidelineStartInfo"
        app:layout_constraintRight_toRightOf="@id/guidelineEndInfo"
        app:layout_constraintTop_toBottomOf="@id/base_xp" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/base_xp_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
       android:backgroundTint="@color/gold_main"
        tools:ignore="RtlHardcoded"
        android:contentDescription="@string/todo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStartInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEndInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".90" />

</androidx.constraintlayout.widget.ConstraintLayout>